tests/error/comptime/pointer_difference14.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		let q: ?*int32 = null;
		{
			let i = 0;
			p = &i;
			q = &i + 1;
		}
		q - p;
	});
}
